--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@
 	height: 400px;
 	width: 400px;
 	display: flex;
+	flex-wrap: wrap;
 	background-color: bisque;
 	margin-left: 50px;
 	margin-top: 20px;
@@ -18,4 +19,20 @@ div {
 	text-align: center;
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	font-weight: 700;
+}
+
+.valid,
+.bomb {
+	width: 40px;
+	height: 40px;
+	border: 5px solid;
+	border-color: #f5f3eb #bab7a9 #bab7a0 #fff;
+	box-sizing: border-box;
+}
+
+.checked {
+	width: 40px;
+	height: 40px;
+	border: 2px solid #9c998d;
+	box-sizing: border-box;
 }
